--- a/home.html
+++ b/home.html
@@ -14,11 +14,12 @@
         <button class="addButton"><i class="fas fa-plus"></i></button>
     </div>
     <div class="container">
-        <div class="item">
+        <!-- <div class="item">
            <input type="text" class="item-input" disabled> 
            <button class="editButton">EDITAR</button>
-           <button class="remove-button">REMOVER</button>
+           <button class="removeButton">REMOVER</button>
         </div>
+    -->
     </div>
 
 <script src="assets/js/index.js"></script>   
